updated several files

--- a/_posts/2023-08-30-week0plan.md
+++ b/_posts/2023-08-30-week0plan.md
@@ -2,11 +2,16 @@
 toc: true
 comments: false
 layout: post
-title: Week 0
-description: Example Plan!!! Analyze hacks and plan.
+title: Week 0 Plans
+description: Week 0 Plans
 type: plans
-courses: { compsci: {week: 1} }
+courses: { compsci: {week: 0} }
 ---
+
+# Week Zero Plans
+
+----
+
 | Day | Tasks |
 | -------- | -------- |
 | Wednesday | Start setting up required tools such as Homebrew, Ruby, Python, etc. Work through the Nighthawk Coders set up page.  |
