changed multiple posts

--- a/_posts/2023-08-21-Week1LabNB.md
+++ b/_posts/2023-08-21-Week1LabNB.md
@@ -11,3 +11,4 @@ courses: { compsci: {week: 1} }
 # Week 1 Lab Notebook
 
 ---
+This week I customized the front page of my blog. In this I ran into a bunch of huge issues. The biggest one probably being not having enough storage. I had about 12 gbs. I did not have alot so there was not alot I could do, since I couldn't download the apps needed. Though to solve this I had to delete a bunch of things from my laptop. This week I also learned how to add a calculator and a bunch of little things to make my homepage more personal. Like I was able to add my freeform, a game, and images for decoration. 
