--- a/_posts/2023-08-30-Week2LabNB.md
+++ b/_posts/2023-08-30-Week2LabNB.md
@@ -11,3 +11,4 @@ courses: { compsci: {week: 2} }
 # Week 2 Lab Notebook
 
 ---
+I'm starting to get the flow of things. We finished up with our blog homepages, now I am adding to the tabs, specifically the CompSci one. This week I have added snake game. This is pretty cool. I can play snake on my website. It is functioning and I am working to also add the game of life.  
