--- a/_posts/2023-08-15-Week0LabNB.md
+++ b/_posts/2023-08-15-Week0LabNB.md
@@ -11,3 +11,4 @@ courses: { compsci: {week: 0} }
 # Week 0 Lab Notebook
 
 ---
+This is the very first week of school and CSP. I am getting familar with the terms and websites we are using. I am downloading my terminal and VS code and homebrew. All of this stuff is needed for my blog. We have picked a partner to work in CSP with, my partner is Ananya. 
