Commit last one

--- a/_posts/2023-09-11-wordgame.md
+++ b/_posts/2023-09-11-wordgame.md
@@ -1,6 +1,6 @@
 ---
 toc: true
-comments: false
+comments: true
 layout: post
 title: Word Game
 description: Guess a random word and see if it's correct
