--- a/_notebooks/2023-08-30-basics-js-data-types.ipynb
+++ b/_notebooks/2023-08-30-basics-js-data-types.ipynb
@@ -636,12 +636,12 @@
     "%%javascript\n",
     "\n",
     "var obj = {\n",
-    "    my_name: \"Imaad\",\n",
+    "    my_name: \"Anika B\",\n",
     "    age: \"15\",\n",
-    "    classes: [\"3D Animation\", \"AP Chem\", \"AP Calc\", \"World History\", \"AP CSP\"],\n",
-    "    interests: [\"Robotics\", \"Coding\", \"Biking\", \"Family\"],\n",
-    "    Github_ID: \"Imaad08\",\n",
-    "    Favorite_Subject: \"Computer Science\"\n",
+    "    classes: [\"AP Chem, HPOE, Honors Humanities, Integrated 3a, AP CSP\"],\n",
+    "    interests: [\"Watching netflix, Sleeping, Tutoring, Swim\"],\n",
+    "    Github_ID: \"anikabhatnagar20\",\n",
+    "    Favorite_Subject: \"Biology\"\n",
     "};\n",
     "\n",
     "// Initial print of unmodified variable\n",
