--- a/_notebooks/2023-08-30-basics-js-data-types.ipynb
+++ b/_notebooks/2023-08-30-basics-js-data-types.ipynb
@@ -638,8 +638,8 @@
     "var obj = {\n",
     "    my_name: \"Anika B\",\n",
     "    age: \"15\",\n",
-    "    classes: [\"AP Chem, HPOE, Honors Humanities, Integrated 3a, AP CSP\"],\n",
-    "    interests: [\"Watching netflix, Sleeping, Tutoring, Swim\"],\n",
+    "    classes: [\"AP Chemistry, Honors Principles of Engineering, Honors Humanities, Integrated 3a, AP Computar Science Princepals\"],\n",
+    "    interests: [\"Watching Netflix, Sleeping, Tutoring, Swim\"],\n",
     "    Github_ID: \"anikabhatnagar20\",\n",
     "    Favorite_Subject: \"Biology\"\n",
     "};\n",
