web dev project

--- a/_notebooks/2023-08-30-basics-js-data-types.ipynb
+++ b/_notebooks/2023-08-30-basics-js-data-types.ipynb
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
@@ -623,7 +623,7 @@
    "outputs": [
     {
      "data": {
-      "application/javascript": "\nvar obj = {\n    my_name: \"Imaad\",\n    age: \"15\",\n    classes: [\"3D Animation\", \"AP Chem\", \"AP Calc\", \"World History\", \"AP CSP\"],\n    interests: [\"Robotics\", \"Coding\", \"Biking\", \"Family\"],\n    Github_ID: \"Imaad08\",\n    Favorite_Subject: \"Computer Science\"\n};\n\n// Initial print of unmodified variable\nconsole.log(obj);\n\n// Pushing cooking to the interests array\nobj.interests.push(\"Cooking\");\nconsole.log(obj);\n\n// Removing Cooking\nobj.interests.pop();\nconsole.log(obj);\n\n// Mathematical opperations on age\nconsole.log(obj.age);\n\nobj.age -= 1;\nconsole.log(obj.age);\n\nobj.age += 1;\nconsole.log(obj.age);\n\n// Determine type of data\nconsole.log(typeof obj.my_name);\n\nconsole.log(typeof obj.age);\n\nconsole.log(typeof obj.classes);\n",
+      "application/javascript": "\nvar obj = {\n    my_name: \"Anika B\",\n    age: \"15\",\n    classes: [\"AP Chemistry, Honors Principles of Engineering, Honors Humanities, Integrated 3a, AP Computar Science Princepals\"],\n    interests: [\"Watching Netflix, Sleeping, Tutoring, Swim\"],\n    Github_ID: \"anikabhatnagar20\",\n    Favorite_Subject: \"Biology\"\n};\n\n// Initial print of unmodified variable\nconsole.log(obj);\n\n// Pushing cooking to the interests array\nobj.interests.push(\"Cooking\");\nconsole.log(obj);\n\n// Removing Cooking\nobj.interests.pop();\nconsole.log(obj);\n\n// Mathematical opperations on age\nconsole.log(obj.age);\n\nobj.age -= 1;\nconsole.log(obj.age);\n\nobj.age += 1;\nconsole.log(obj.age);\n\n// Determine type of data\nconsole.log(typeof obj.my_name);\n\nconsole.log(typeof obj.age);\n\nconsole.log(typeof obj.classes);\n",
       "text/plain": [
        "<IPython.core.display.Javascript object>"
       ]
