--- a/_notebooks/2023-08-30-basics-js-with-html.ipynb
+++ b/_notebooks/2023-08-30-basics-js-with-html.ipynb
@@ -350,83 +350,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "\n",
-       "<style>\n",
-       "    .Text p{\n",
-       "        align-items: center;\n",
-       "    }\n",
-       "    button {\n",
-       "        padding: 10px 20px;\n",
-       "        background-color: #007bff;\n",
-       "        color: #fff;\n",
-       "        border: none;\n",
-       "        border-radius: 5px;\n",
-       "        cursor: pointer;\n",
-       "        transition: background-color 0.3s;\n",
-       "        margin-left: 40%;\n",
-       "      }\n",
-       "      button:hover {\n",
-       "        background-color: #0056b3;\n",
-       "      }\n",
-       "</style>\n",
-       "<div class=\"Text\">\n",
-       "    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae, quod reiciendis neque odit ipsam similique, adipisci rem iusto dignissimos est facere? Nemo repellendus perferendis corporis neque eius eveniet eligendi sequi!</p>\n",
-       "    <br>\n",
-       "    <button id=\"testbutton\">Test Button</button>\n",
-       "</div>\n",
-       "\n",
-       "<br>\n",
-       "<br>\n",
-       "\n",
-       "<div class=\"Links\">\n",
-       "    <a target=\"_blank\" href=\"https://poway.instructure.com/\">Canvas</a>\n",
-       "    <br>\n",
-       "    <br>\n",
-       "    <a target=\"_blank\" href=\"https://github.com/\">Github</a>\n",
-       "    <br>\n",
-       "    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident maiores, dolorum officiis qui iure, delectus eum enim minus facere eius quisquam! Veniam nostrum tempora alias natus praesentium in accusantium laborum!</p>\n",
-       "</div>\n",
-       "\n",
-       " <script>\n",
-       "    var originalText = document.querySelector('.Text p').innerHTML;\n",
-       "    var originalLinks = {\n",
-       "        firstLink: document.querySelectorAll('.Links a')[0].getAttribute('href'),\n",
-       "        secondLink: document.querySelectorAll('.Links a')[1].getAttribute('href')\n",
-       "    };\n",
-       "\n",
-       "    var isReverted = false;\n",
-       "\n",
-       "    document.getElementById('testbutton').addEventListener('click', function() {\n",
-       "        if (isReverted) {\n",
-       "            // Revert links and text to original values\n",
-       "            document.querySelectorAll('.Links a')[0].setAttribute('href', originalLinks.firstLink);\n",
-       "            document.querySelectorAll('.Links a')[1].setAttribute('href', originalLinks.secondLink);\n",
-       "            document.querySelector('.Text p').innerHTML = originalText;\n",
-       "        } else {\n",
-       "            // Change links and text\n",
-       "            var tempLink = document.querySelectorAll('.Links a')[0].getAttribute('href');\n",
-       "            document.querySelectorAll('.Links a')[0].setAttribute('href', document.querySelectorAll('.Links a')[1].getAttribute('href'));\n",
-       "            document.querySelectorAll('.Links a')[1].setAttribute('href', tempLink);\n",
-       "            document.querySelector('.Text p').innerHTML = \"Switched!\";\n",
-       "        }\n",
-       "\n",
-       "        isReverted = !isReverted; // Toggle the state for the next click\n",
-       "    });\n",
-       "</script>\n",
-       "\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with '/usr/local/bin/python3' requires the ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: '/usr/local/bin/python3 -m pip install ipykernel -U --user --force-reinstall'"
+     ]
     }
    ],
    "source": [
@@ -460,10 +395,10 @@
     "<br>\n",
     "\n",
     "<div class=\"Links\">\n",
-    "    <a target=\"_blank\" href=\"https://poway.instructure.com/\">Canvas</a>\n",
+    "    <a target=\"_blank\" href=\"https://www.amazon.com/\">Amazon</a>\n",
     "    <br>\n",
     "    <br>\n",
-    "    <a target=\"_blank\" href=\"https://github.com/\">Github</a>\n",
+    "    <a target=\"_blank\" href=\"https://us.shein.com/\">Shein</a>\n",
     "    <br>\n",
     "    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident maiores, dolorum officiis qui iure, delectus eum enim minus facere eius quisquam! Veniam nostrum tempora alias natus praesentium in accusantium laborum!</p>\n",
     "</div>\n",
@@ -644,7 +579,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.5"
   },
   "orig_nbformat": 4
  },
