data abstracion hw

--- a/_notebooks/2023-08-29-basics-of-js.ipynb
+++ b/_notebooks/2023-08-29-basics-of-js.ipynb
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {
     "vscode": {
      "languageId": "html"
@@ -556,14 +556,17 @@
        "        var result = document.getElementById(\"placeholder\");\n",
        "\n",
        "        if(num1 > num2){\n",
-       "            console.log(\"Number 1 is greater than Number 2\");\n",
-       "            result.textContent = \"Number 1 is greater than Number 2\";\n",
+       "            message = num1 + \" is greater than \" + num2;\n",
+       "            console.log(message);\n",
+       "            result.textContent = message;\n",
        "        } else if (num1 < num2) {\n",
-       "            console.log(\"Number 1 is less than Number 2\")\n",
-       "            result.textContent = \"Number 1 is less than Number 2\";\n",
+       "            message = num1 + \" is less than \" + num2;\n",
+       "            console.log(message);\n",
+       "            result.textContent = message;\n",
        "        } else if (num1 == num2) {\n",
-       "            console.log(\"Number 1 is equal to Number 2\");\n",
-       "            result.textContent = \"Number 1 is equal to Number 2\";\n",
+       "            message = num1 + \" is equal to \" + num2;\n",
+       "            console.log(message);\n",
+       "            result.textContent = message;\n",
        "        } else {\n",
        "            console.log(\"Unexpected error\");\n",
        "            result.textContent = \"Please try again with different numbers\";\n",
@@ -617,14 +620,17 @@
     "        var result = document.getElementById(\"placeholder\");\n",
     "\n",
     "        if(num1 > num2){\n",
-    "            console.log(\"Number 1 is greater than Number 2\");\n",
-    "            result.textContent = \"Number 1 is greater than Number 2\";\n",
+    "            message = num1 + \" is greater than \" + num2;\n",
+    "            console.log(message);\n",
+    "            result.textContent = message;\n",
     "        } else if (num1 < num2) {\n",
-    "            console.log(\"Number 1 is less than Number 2\")\n",
-    "            result.textContent = \"Number 1 is less than Number 2\";\n",
+    "            message = num1 + \" is less than \" + num2;\n",
+    "            console.log(message);\n",
+    "            result.textContent = message;\n",
     "        } else if (num1 == num2) {\n",
-    "            console.log(\"Number 1 is equal to Number 2\");\n",
-    "            result.textContent = \"Number 1 is equal to Number 2\";\n",
+    "            message = num1 + \" is equal to \" + num2;\n",
+    "            console.log(message);\n",
+    "            result.textContent = message;\n",
     "        } else {\n",
     "            console.log(\"Unexpected error\");\n",
     "            result.textContent = \"Please try again with different numbers\";\n",
