--- a/_notebooks/2023-10-14-Illiterationhw.ipynb
+++ b/_notebooks/2023-10-14-Illiterationhw.ipynb
@@ -8,7 +8,7 @@
     "toc: false\n",
     "comments: true\n",
     "layout: post\n",
-    "title: Algorithim HW\n",
+    "title: illiteration hw\n",
     "description: Student teaching\n",
     "type: plans\n",
     "courses: { compsci: {week: 5} }\n",
