--- a/_notebooks/2023-10-15-booleanhw.ipynb
+++ b/_notebooks/2023-10-15-booleanhw.ipynb
@@ -38,14 +38,14 @@
     "\n",
     "# Interactive program for Bob to grade homework\n",
     "def main():\n",
-    "    print(\"Welcome to Bob's Homework Grading System.\")\n",
+    "    print(\"Bob's Homework Grading System.\")\n",
     "    problems_completed = input(\"Did the student complete all the problems? (yes/no): \").lower()\n",
     "    submitted_on_time = input(\"Did the student submit the homework on time? (yes/no): \").lower()\n",
     "\n",
     "    if grade_homework(problems_completed == 'yes', submitted_on_time == 'yes'):\n",
-    "        print(\"The student's homework is complete and submitted on time.\")\n",
+    "        print(\"The student has completed the homework on time!\")\n",
     "    else:\n",
-    "        print(\"The student's homework is incomplete or not submitted on time.\")\n",
+    "        print(\"The student's homework is not finished and/or not submitted on time.\")\n",
     "\n",
     "# Running the program\n",
     "main()"
