--- a/_notebooks/2023-10-15-booleanhw.ipynb
+++ b/_notebooks/2023-10-15-booleanhw.ipynb
@@ -17,9 +17,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bob's Homework Grading System.\n"
+     ]
+    }
+   ],
    "source": [
     "def AND_gate(a, b):\n",
     "    return a and b\n",
@@ -45,7 +53,7 @@
     "    if grade_homework(problems_completed == 'yes', submitted_on_time == 'yes'):\n",
     "        print(\"The student has completed the homework on time!\")\n",
     "    else:\n",
-    "        print(\"The student's homework is not finished and/or not submitted on time.\")\n",
+    "        print(\"The student's homework is not finished and/or late.\")\n",
     "\n",
     "# Running the program\n",
     "main()"
@@ -53,8 +61,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
