--- a/_notebooks/2023-10-15-booleanhw.ipynb
+++ b/_notebooks/2023-10-15-booleanhw.ipynb
@@ -29,34 +29,47 @@
     }
    ],
    "source": [
-    "def AND_gate(a, b):\n",
-    "    return a and b\n",
+    "isComplete = {'Student 1': 1, 'Student 2': 1, 'Student 3': 0, 'Student 4': 1, 'Student 5': 0, 'Student 6': 1}\n",
+    "isOnTime = {'Student 1': 1, 'Student 2': 0, 'Student 3': 0, 'Student 4': 1, 'Student 5': 1, 'Student 6': 1}\n",
+    "| A | B | A XNOR B |\n",
+    "|---|---|----------|\n",
+    "| 0 | 0 |    1     |\n",
+    "| 0 | 1 |    0     |\n",
+    "| 1 | 0 |    0     |\n",
+    "| 1 | 1 |    1     |\n",
+    "def xor_gate(a, b):\n",
+    "    return bool(a ^ b)\n",
     "\n",
-    "def OR_gate(a, b):\n",
-    "    return a or b\n",
-    "\n",
-    "# Function to grade homework\n",
-    "def grade_homework(problems_completed, submitted_on_time):\n",
-    "    incomplete = OR_gate(NOT_gate(problems_completed), NOT_gate(submitted_on_time))\n",
-    "    return not incomplete\n",
-    "\n",
-    "# NOT gate implementation\n",
-    "def NOT_gate(a):\n",
+    "def not_gate(a):\n",
     "    return not a\n",
     "\n",
-    "# Interactive program for Bob to grade homework\n",
-    "def main():\n",
-    "    print(\"Bob's Homework Grading System.\")\n",
-    "    problems_completed = input(\"Did the student complete all the problems? (yes/no): \").lower()\n",
-    "    submitted_on_time = input(\"Did the student submit the homework on time? (yes/no): \").lower()\n",
+    "def xnor_gate(a, b):\n",
+    "    return not_gate(xor_gate(a, b))\n",
     "\n",
-    "    if grade_homework(problems_completed == 'yes', submitted_on_time == 'yes'):\n",
-    "        print(\"The student has completed the homework on time!\")\n",
+    "choice = input(\"Choose a function: XNOR(1), NOT(2), XOR(3): \")\n",
+    "print(choice)\n",
+    "\n",
+    "if choice == \"1\":\n",
+    "    first_input = bool(int(input(\"Enter first boolean value (0/1): \")))\n",
+    "    second_input = bool(int(input(\"Enter second boolean value (0/1): \")))\n",
+    "    print(xnor_gate(first_input, second_input))\n",
+    "elif choice == \"2\":\n",
+    "    first_input = bool(int(input(\"Enter boolean value (0/1): \")))\n",
+    "    print(not_gate(first_input))\n",
+    "elif choice == \"3\":\n",
+    "    first_input = bool(int(input(\"Enter first boolean value (0/1): \")))\n",
+    "    second_input = bool(int(input(\"Enter second boolean value (0/1): \")))\n",
+    "    print(xor_gate(first_input, second_input))\n",
+    "grading_results = {}\n",
+    "for student_name in isComplete:\n",
+    "    if isComplete[student_name] and isOnTime[student_name]:\n",
+    "        grading_results[student_name] = \"Complete\"\n",
     "    else:\n",
-    "        print(\"The student's homework is not finished and/or late.\")\n",
+    "        grading_results[student_name] = \"Incomplete\"\n",
     "\n",
-    "# Running the program\n",
-    "main()"
+    "import pandas as pd\n",
+    "df = pd.DataFrame.from_dict(grading_results, orient='index', columns=['Status'])\n",
+    "print(df)\n"
    ]
   }
  ],
