--- a/_notebooks/2023-10-20-listsandsearchhw.ipynb
+++ b/_notebooks/2023-10-20-listsandsearchhw.ipynb
@@ -9,7 +9,7 @@
     "comments: true\n",
     "layout: post\n",
     "title: lists and search hw\n",
-    "description: Student teaching\n",
+    "description: Lists and search hw hack\n",
     "type: plans\n",
     "courses: { compsci: {week: 5} }\n",
     "---"
