developing prodecures hw

--- a/_notebooks/2023-10-03-developingProceduresandhwP5.ipynb
+++ b/_notebooks/2023-10-03-developingProceduresandhwP5.ipynb
@@ -105,11 +105,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid character '←' (U+2190) (3242718345.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[1], line 3\u001b[0;36m\u001b[0m\n\u001b[0;31m    taxFactor ← 1 + (taxPercentage / 100)\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid character '←' (U+2190)\n"
+     ]
+    }
+   ],
    "source": [
-    "#code here"
+    "FUNCTION calculateWithTax(basePrice, taxPercentage)\n",
+    "{\n",
+    "    taxFactor ← 1 + (taxPercentage / 100)\n",
+    "    totalPrice ← basePrice * taxFactor\n",
+    "    RETURN totalPrice\n",
+    "}\n",
+    "\n",
+    "finalAmount ← calculateWithTax(price, 10)\n"
    ]
   },
   {
@@ -172,7 +188,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def subtract(a, b):\n",
+    "    result = a - b\n",
+    "    return result\n",
+    "\n",
+    "print(subtract(10, 56))\n",
+    "\n",
+    "def product(a, b):\n",
+    "    result = a * b\n",
+    "    return result\n",
+    "\n",
+    "print(product(10, 600))\n",
+    "\n",
+    "def quotient(a, b):\n",
+    "    result = a / b\n",
+    "    return result\n",
+    "\n",
+    "print(quotient(14, 600))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -245,6 +279,44 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Vehicle:  \n",
+    "    def __init__(self, make, year, cost):  \n",
+    "        self.make = make\n",
+    "        self.year = year\n",
+    "        self.cost = cost\n",
+    "        \n",
+    "    def getMake(self): \n",
+    "        return self.make\n",
+    "    \n",
+    "    def getYear(self): \n",
+    "        return self.year\n",
+    "    \n",
+    "    def getCost(self): \n",
+    "        return self.cost\n",
+    "    \n",
+    "    def setMake(self, make): \n",
+    "        self.make = make\n",
+    "        \n",
+    "    def setYear(self, year):  \n",
+    "        self.year = year\n",
+    "        \n",
+    "    def setCost(self, cost): \n",
+    "        self.cost = cost\n",
+    "        \n",
+    "    def __str__(self): \n",
+    "        return f\"The vehicle is {self.make}, manufactured in {self.year}, priced at {self.cost} dollars.\"\n",
+    "\n",
+    "vehicle1 = Vehicle(\"Honda Civic\", 2018, 13000)\n",
+    "vehicle2 = Vehicle(\"Toyota Prius\", 2023, 28000)\n",
+    "vehicle3 = Vehicle(\"Chevrolet Impala\", 2020, 22000)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -309,7 +381,37 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Student:\n",
+    "    def __init__(self, contact, full_name, score):\n",
+    "        self.contact = contact\n",
+    "        self.full_name = full_name\n",
+    "        self.score = score\n",
+    "\n",
+    "    def retrieve_name(self):\n",
+    "        return self.full_name\n",
+    "\n",
+    "    def update_name(self, full_name):\n",
+    "        self.full_name = full_name\n",
+    "\n",
+    "    def retrieve_contact(self):\n",
+    "        return self.contact\n",
+    "\n",
+    "    def update_contact(self, contact):\n",
+    "        self.contact = contact\n",
+    "\n",
+    "    def retrieve_score(self):\n",
+    "        return self.score\n",
+    "\n",
+    "    def update_score(self, score):\n",
+    "        self.score = score\n",
+    "\n",
+    "    def display_details(self):\n",
+    "        return f\"I am {self.full_name}. Contact me at {self.contact}. I achieved a grade of {self.score}.\"\n",
+    "\n",
+    "personal_record = Student(\"anikabhatnagar20@gmail.com\", \"Anika Bhatnagar\", \"A+\")\n",
+    "print(personal_record.display_details())\n"
+   ]
   }
  ],
  "metadata": {
@@ -328,7 +430,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
