--- a/_notebooks/2023-09-30-developingAlgorithmsTeach.ipynb
+++ b/_notebooks/2023-09-30-developingAlgorithmsTeach.ipynb
@@ -526,6 +526,26 @@
     "\n",
     "| <img src=\"https://i.ibb.co/ZBFgwn2/Screen-Shot-2023-10-15-at-7-40-22-PM.png\" width = 600px height = auto > "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fibonacci_iterative(n):\n",
+    "    if n <= 1:\n",
+    "        return n\n",
+    "\n",
+    "    a, b = 0, 1\n",
+    "    for _ in range(2, n+1):\n",
+    "        a, b = b, a+b\n",
+    "    return b\n",
+    "\n",
+    "# Example usage:\n",
+    "n = 7\n",
+    "print(fibonacci_iterative(n))  # Outputs: 13"
+   ]
   }
  ],
  "metadata": {
