--- a/_notebooks/2023-10-10-Boolean-If.ipynb
+++ b/_notebooks/2023-10-10-Boolean-If.ipynb
@@ -647,31 +647,47 @@
     }
    ],
    "source": [
-    "def nandgate(a, b):\n",
-    "    if not (a and b):\n",
-    "        return True\n",
-    "    elif not (a and b):\n",
-    "        return False\n",
-    "    \n",
-    "def andgate(a, b):\n",
-    "    if a and b:\n",
-    "        return True\n",
-    "    elif not (a and b):\n",
-    "        return False\n",
-    "    \n",
-    "def orgate(a, b):\n",
-    "    if a or b:\n",
-    "        return True\n",
+    "isComplete = {'Student 1': 1, 'Student 2': 1, 'Student 3': 0, 'Student 4': 1, 'Student 5': 0, 'Student 6': 1}\n",
+    "isOnTime = {'Student 1': 1, 'Student 2': 0, 'Student 3': 0, 'Student 4': 1, 'Student 5': 1, 'Student 6': 1}\n",
+    "| A | B | A XNOR B |\n",
+    "|---|---|----------|\n",
+    "| 0 | 0 |    1     |\n",
+    "| 0 | 1 |    0     |\n",
+    "| 1 | 0 |    0     |\n",
+    "| 1 | 1 |    1     |\n",
+    "def xor_gate(a, b):\n",
+    "    return bool(a ^ b)\n",
+    "\n",
+    "def not_gate(a):\n",
+    "    return not a\n",
+    "\n",
+    "def xnor_gate(a, b):\n",
+    "    return not_gate(xor_gate(a, b))\n",
+    "\n",
+    "choice = input(\"Choose a function: XNOR(1), NOT(2), XOR(3): \")\n",
+    "print(choice)\n",
+    "\n",
+    "if choice == \"1\":\n",
+    "    first_input = bool(int(input(\"Enter first boolean value (0/1): \")))\n",
+    "    second_input = bool(int(input(\"Enter second boolean value (0/1): \")))\n",
+    "    print(xnor_gate(first_input, second_input))\n",
+    "elif choice == \"2\":\n",
+    "    first_input = bool(int(input(\"Enter boolean value (0/1): \")))\n",
+    "    print(not_gate(first_input))\n",
+    "elif choice == \"3\":\n",
+    "    first_input = bool(int(input(\"Enter first boolean value (0/1): \")))\n",
+    "    second_input = bool(int(input(\"Enter second boolean value (0/1): \")))\n",
+    "    print(xor_gate(first_input, second_input))\n",
+    "grading_results = {}\n",
+    "for student_name in isComplete:\n",
+    "    if isComplete[student_name] and isOnTime[student_name]:\n",
+    "        grading_results[student_name] = \"Complete\"\n",
     "    else:\n",
-    "        return False\n",
+    "        grading_results[student_name] = \"Incomplete\"\n",
     "\n",
-    "def xorgate(a, b):\n",
-    "    return 'add your function here'\n",
-    "\n",
-    "print(xorgate(True, True))\n",
-    "print(xorgate(True, False))\n",
-    "print(xorgate(False, True))\n",
-    "print(xorgate(False, False))"
+    "import pandas as pd\n",
+    "df = pd.DataFrame.from_dict(grading_results, orient='index', columns=['Status'])\n",
+    "print(df)"
    ]
   }
  ],
