--- a/_notebooks/2023-10-12-Iteration-In-Python.ipynb
+++ b/_notebooks/2023-10-12-Iteration-In-Python.ipynb
@@ -632,7 +632,76 @@
    "source": [
     "students = {}\n",
     "\n",
-    "#Code goes here"
+    "<html lang=\"en\">\n",
+    "<head>\n",
+    "    <meta charset=\"UTF-8\">\n",
+    "    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\">\n",
+    "    <title>Student Grades</title>\n",
+    "</head>\n",
+    "<body>\n",
+    "\n",
+    "<button onclick=\"start()\">Start Adding Students</button>\n",
+    "<p id=\"output\"></p>\n",
+    "\n",
+    "<script>\n",
+    "    let studentGrades = {};\n",
+    "    let passingStudents = [];\n",
+    "\n",
+    "    function start() {\n",
+    "        let continueAdding = true;\n",
+    "\n",
+    "        while (continueAdding) {\n",
+    "            let name = prompt(\"Enter the student's name:\");\n",
+    "\n",
+    "            if (name === null) { // If user presses 'cancel' on the prompt\n",
+    "                break;\n",
+    "            }\n",
+    "\n",
+    "            let gradeStr = prompt(\"Enter the grade for \" + name + \":\");\n",
+    "\n",
+    "            if (gradeStr === null) { // If user presses 'cancel' on the prompt\n",
+    "                break;\n",
+    "            }\n",
+    "\n",
+    "            let grade = parseFloat(gradeStr);\n",
+    "\n",
+    "            // Nested if/else\n",
+    "            if (name && !isNaN(grade)) {\n",
+    "                studentGrades[name] = grade;\n",
+    "            } else {\n",
+    "                alert(\"Invalid input. Please enter a valid name and grade.\");\n",
+    "                continue;\n",
+    "            }\n",
+    "\n",
+    "            let more = prompt(\"Do you want to add more students? (yes/no)\").toLowerCase();\n",
+    "\n",
+    "            if (more === \"no\") {\n",
+    "                continueAdding = false;\n",
+    "            }\n",
+    "        }\n",
+    "\n",
+    "        processGrades();\n",
+    "    }\n",
+    "\n",
+    "    function processGrades() {\n",
+    "        let highestScore = -Infinity;\n",
+    "\n",
+    "        for (let grade of Object.values(studentGrades)) {\n",
+    "            if (grade > highestScore) {\n",
+    "                highestScore = grade;\n",
+    "            }\n",
+    "        }\n",
+    "\n",
+    "        for (let [name, grade] of Object.entries(studentGrades)) {\n",
+    "            if (grade >= 50) {\n",
+    "                passingStudents.push(name);\n",
+    "            }\n",
+    "        }\n",
+    "\n",
+    "        document.getElementById(\"output\").innerText = \n",
+    "            \"Highest score is: \" + highestScore + \"\\n\" + \n",
+    "            \"Students who passed: \" + passingStudents.join(\", \");\n",
+    "    }"
    ]
   }
  ],
