--- a/_posts/2023-12-18-Legal-Ethical-Concerns.ipynb
+++ b/_posts/2023-12-18-Legal-Ethical-Concerns.ipynb
@@ -5,6 +5,7 @@
    "metadata": {},
    "source": [
     "---\n",
+    "toc: true\n",
     "comments: true\n",
     "layout: post\n",
     "title: 5.5 Legal & Ethical Concerns\n",
