--- a/_notebooks/2023-08-17-Routing-And-Computing.ipynb
+++ b/_notebooks/2023-08-17-Routing-And-Computing.ipynb
@@ -8,7 +8,7 @@
     "toc: false\n",
     "comments: true\n",
     "layout: notebook\n",
-    "title: IPYNB Table, Code\n",
+    "title: Routing and Computing \n",
     "description: Team teach on routing and computing \n",
     "courses: { compsci: {week: 13} }\n",
     "type: hacks\n",
