--- a/_notebooks/2023-12-21-Safe_computing.ipynb
+++ b/_notebooks/2023-12-21-Safe_computing.ipynb
@@ -5,10 +5,10 @@
    "metadata": {},
    "source": [
     "---\n",
-    "toc: False\n",
+    "toc: true\n",
+    "comments: true\n",
     "layout: post\n",
-    "hide: False\n",
-    "title: P2 | 5.6 - Safe Computing\n",
+    "title: 5.6 - Safe Computing\n",
     "description: Team Teach On Safe Computing\n",
     "courses: {'compsci': {'week': 17}}\n",
     "type: Hacks\n",
