--- a/_notebooks/2023-12-21-Safe_computing.ipynb
+++ b/_notebooks/2023-12-21-Safe_computing.ipynb
@@ -11,7 +11,7 @@
     "title: 5.6 - Safe Computing\n",
     "description: Team Teach On Safe Computing\n",
     "courses: {'compsci': {'week': 17}}\n",
-    "type: Hacks\n",
+    "type: hacks\n",
     "---"
    ]
   },
