change name lol

--- a/_notebooks/2024-01-12-project2.ipynb
+++ b/_notebooks/2024-01-12-project2.ipynb
@@ -8,8 +8,8 @@
     "toc: true\n",
     "comments: true\n",
     "layout: post\n",
-    "title: 5.6 - Safe Computing\n",
-    "description: Team Teach On Safe Computing\n",
+    "title: Ideas for CPT \n",
+    "description: My idea for cpt \n",
     "courses: {'compsci': {'week': 18}}\n",
     "type: hacks\n",
     "---"
