--- a/_notebooks/2024-03-15-cbpractice3.ipynb
+++ b/_notebooks/2024-03-15-cbpractice3.ipynb
@@ -50,7 +50,23 @@
     "## Question 17 \n",
     "\n",
     "![Image](https://github.com/nighthawkcoders/teacher_portfolio/assets/142547044/94c51c1a-5e1d-4139-9222-45098c9df41d)\n",
-    "\n"
+    "\n",
+    "B is correct since for Devices B and C to stop communicating, they must be totally disconnected from one another. Device B and Device C can still communicate even if any three connections are removed.\n",
+    "\n",
+    "## Question 22\n",
+    "![Image](https://github.com/nighthawkcoders/teacher_portfolio/assets/142547044/137684a9-c046-469b-975b-2e2b3c0679cd)\n",
+    "\n",
+    "Option A would be correct becasue the code segment starts count at 1 and increments it after the outer loop. The robot travels 1 square forward, rotates left, then 2 squares forward, 3 squares forward, 4 squares forward, then turns left. Robots exit the grid looking up in the lower right corner. It initializes count to 0 and increments it to start the outer loop. Since count is initialized to 0 and incremented immediately, the inner loop iterates the same number of times as the outer loop in the supplied code. Robots exit the grid looking up in the lower right corner.\n",
+    "\n",
+    "## Question 26 \n",
+    "![Image](https://github.com/nighthawkcoders/teacher_portfolio/assets/142547044/5bfbcd61-acf1-466e-b3f9-adefffe6b792)\n",
+    "\n",
+    "Option A would be correct since each step is dependent on the step that happens before it, then each step has towait for the first step step to complete before starting the next one.\n",
+    "\n",
+    "## Question 28\n",
+    "![Image](https://github.com/nighthawkcoders/teacher_portfolio/assets/142547044/01c3c73a-b139-43c0-bf69-23074389dcb3)\n",
+    "\n",
+    "The rigth answer would be j = 5, k = -5, inside the loop, the number of k is decreased by 1 over and over until k = 0. If k is negative at the start, it will keep going down until it reaches 0.\n"
    ]
   }
  ],
