--- a/_notebooks/2024-03-15-cbpractice3.ipynb
+++ b/_notebooks/2024-03-15-cbpractice3.ipynb
@@ -66,7 +66,32 @@
     "## Question 28\n",
     "![Image](https://github.com/nighthawkcoders/teacher_portfolio/assets/142547044/01c3c73a-b139-43c0-bf69-23074389dcb3)\n",
     "\n",
-    "The rigth answer would be j = 5, k = -5, inside the loop, the number of k is decreased by 1 over and over until k = 0. If k is negative at the start, it will keep going down until it reaches 0.\n"
+    "The rigth answer would be j = 5, k = -5, inside the loop, the number of k is decreased by 1 over and over until k = 0. If k is negative at the start, it will keep going down until it reaches 0.\n",
+    "\n",
+    "## Question 32 \n",
+    "![Image](https://github.com/nighthawkcoders/teacher_portfolio/assets/142547044/c83f577c-07eb-4fa6-b592-639468137195)\n",
+    "\n",
+    "Public-key encryption keeps the internet secure which is why A would be correct. It makes sure unauthirzed users are not able to go into something they do not have acess to. \n",
+    "\n",
+    "## Question 45 \n",
+    "![Image](https://github.com/nighthawkcoders/teacher_portfolio/assets/142547044/60008dd9-4624-4962-8e1a-c8ee0166082c)\n",
+    "![Image](https://github.com/nighthawkcoders/teacher_portfolio/assets/142547044/4fca196f-04bb-4638-af37-8dbf626e8401)\n",
+    "OPtion C is correct because the first call to botStepper moves the robot forward two squares, rotates it left so that it faces toward the top of the grid, moves it forward two squares, and rotates it right so that it faces right. The code segment then moves the robot forward one square. The second call to botStepper moves the robot forward three squares, rotates it left so that it faces toward the top of the grid, moves it forward three squares, and rotates it right so that it faces right. The robot ends in the gray square. Option A is wrong because the first call to botStepper moves the robot forward two squares, rotates it left so that it faces toward the top of the grid, moves it forward two squares, and rotates it right so that it faces right. The second call to botStepper moves the robot forward three squares, rotates it left so that it faces toward the top of the grid, moves it forward three squares, and rotates it right so that it faces right. The robot ends one square to the left of the gray square.\n",
+    "\n",
+    "## Question 48 \n",
+    "![Image](https://github.com/nighthawkcoders/teacher_portfolio/assets/142547044/c2916d28-4c4e-4ef5-8fad-2630c6771577)\n",
+    "In option C, tricking a user into providing personal information is an example of a phishing attack, but it doesn't directly gather personal information. But option A is correct since the rogue access point is a wireless access point that gives unauthorized access to secure networks. Data sent over public networks can be intercepted, analyzed, and modified.\n",
+    "\n",
+    "## Question 53 \n",
+    "![Image](https://github.com/nighthawkcoders/teacher_portfolio/assets/142547044/05bfd1ae-afd2-4dbc-8224-766c5ed56659)\n",
+    "\n",
+    "Option A is correct because Step 4 checks every element of the list, gradually count each time target appears\n",
+    "\n",
+    "## Question 54 \n",
+    "![Image](https://github.com/nighthawkcoders/teacher_portfolio/assets/142547044/5d8fd61f-efc6-43b8-b1f6-439b23d4d39b)\n",
+    "Option B is correct is the data captured each time a truck enters or leaves the depot do not include any information about the number of customers\n",
+    "\n",
+    "\n"
    ]
   }
  ],
