--- a/_notebooks/2024-03-15-cbpractice3.ipynb
+++ b/_notebooks/2024-03-15-cbpractice3.ipynb
@@ -91,8 +91,32 @@
     "![Image](https://github.com/nighthawkcoders/teacher_portfolio/assets/142547044/5d8fd61f-efc6-43b8-b1f6-439b23d4d39b)\n",
     "Option B is correct is the data captured each time a truck enters or leaves the depot do not include any information about the number of customers\n",
     "\n",
+    "## Question 55\n",
+    "<img width=\"1013\" alt=\"image\" src=\"https://github.com/anikabhatnagar20/anikabhatnagar20/assets/142547044/6fc76748-7fc8-4119-93b4-244e7d17c067\">\n",
+    "\n",
+    "Option D causes an error because there is no longer an element at index len. Option C would be the correct one because inserts temp as the first element of the list. \n",
+    "\n",
+    "## Question 57 \n",
+    "<img width=\"1043\" alt=\"image\" src=\"https://github.com/anikabhatnagar20/anikabhatnagar20/assets/142547044/716b5661-5da3-4d08-8387-4b0bd33d4191\">\n",
+    "\n",
+    "Option A is correct since to run tasks R and S on the other processor, it will take 35 seconds all together. All four tasks are finished in 40 seconds because the processors work together.\n",
+    "\n",
+    "## Question 68\n",
+    "<img width=\"1086\" alt=\"image\" src=\"https://github.com/anikabhatnagar20/anikabhatnagar20/assets/142547044/e90847b2-7c25-41e1-b751-4d5c4027a36a\">\n",
+    "\n",
+    "B and D both contain no duplicates, which is why A and C would be correct since the question is asking NOT. \n",
+    "\n",
+    "## Question 70 \n",
+    "<img width=\"998\" alt=\"image\" src=\"https://github.com/anikabhatnagar20/anikabhatnagar20/assets/142547044/73bf2075-3065-4fe4-acc5-645401936fe0\">\n",
+    "\n",
+    "The correct answer would be C instead of B since this piece of code gives the characters to the left of place n to the variable newStr.\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
