--- a/_posts/2024-04-19-writeup.ipynb
+++ b/_posts/2024-04-19-writeup.ipynb
@@ -7,7 +7,7 @@
     "---\n",
     "comments: True\n",
     "layout: post\n",
-    "title: MCQ 2020 Frequently Missed Questions\n",
+    "title: Write up \n",
     "description: Questions and sample Python code to represent the most frequently missed questions on the 2020 AP Computer Science A Multiple Choice Exam.\n",
     "type: collab\n",
     "courses: {'csp': {'week': 26}}\n",
